--- a/Task 4/index.html
+++ b/Task 4/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h4>About TechTales</h4>
+                    <h4>About Hassan's Blogs</h4>
                     <p>A personal journey through the worlds of technology, travel, and lifestyle. Sharing insights and stories to inspire and inform.</p>
                 </div>
                 <div class="footer-column">
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; <span id="copyright-year"></span> TechTales. All rights reserved.</p>
+                <p>&copy; <span id="copyright-year"></span> Hassan's Blogs. All rights reserved.</p>
             </div>
         </div>
     </footer>
